--- a/XML_management/app_xml/templates/employee_add.html
+++ b/XML_management/app_xml/templates/employee_add.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,25 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale = 1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script  src="{% static 'js/employee_add.js' %}"></script>
 </head>
 <body>
 <div class="container mt-3">
-    <h1 align="center"> Employee Edit Form </h1>
-    <form method="POST">
+    <h1 align="center"> Employee Add Form </h1>
+    <form id="addEmployeeForm" method="POST">
         {% csrf_token %}
         <div class="my-2">
             <label for="id"> Id: </label>
-            <input type="text" class="form-control" id="id" placeholder="Enter First name" value="{{select_employee_data.id}}" name="id" readonly>
-
+            <input type="text" class="form-control" id="id" placeholder="Enter First name"  name="id" required>
+            <span id="error-message" style="color: red;"></span><br>
         </div>
         <div class="my-2">
             <label for="fname"> First Name: </label>
-            <input type="text" class="form-control" id="fname" placeholder="Enter First name" value="{{select_employee_data.firstname}}" name="firstname">
+            <input type="text" class="form-control" id="fname" placeholder="Enter First name"  name="firstname" required>
 
         </div>
         <div class="my-2">
             <label for="lname"> Last Name: </label>
-            <input type="text" class="form-control" id="lname" placeholder="Enter Last name" value="{{select_employee_data.lastname}}" name="lastname">
+            <input type="text" class="form-control" id="lname" placeholder="Enter Last name"  name="lastname" required>
         </div>
         <div class="my-2">
             <label for="title">Title: </label>
@@ -31,18 +34,20 @@
         </div>
         <div class="my-2">
             <label for="division">Division: </label>
-            <input type="text" class="form-control" id="division" placeholder="Enter Your Division" value="{{select_employee_data.division}}" name="division">
+            <input type="text" class="form-control" id="division" placeholder="Enter Your Division"  name="division" required>
         </div>
         <div class="my-2">
             <label for="building">Building: </label>
-            <input type="number" class="form-control" id="building" placeholder="Enter Building " value="{{select_employee_data.building}}" name="building">
+            <input type="number" class="form-control" id="building" placeholder="Enter Building "  name="building" required>
         </div>
         <div class="my-2">
             <label for="room">Room: </label>
-            <input type="number" class="form-control" id="room" placeholder="Enter Room number" value="{{select_employee_data.room}}" name="room">
+            <input type="number" class="form-control" id="room" placeholder="Enter Room number"  name="room" required>
         </div>
-        <button type="submit" class="btn btn-danger"> Submit</button>
+        <button type="submit" class="btn btn-danger" onclick="checkUserId()"> Submit</button>
     </form>
+    <div id="errorMessage" style="color: red;"></div>
+
 </div>
 </body>
 </html>
