--- a/XML_management/app_xml/templates/user_list.html
+++ b/XML_management/app_xml/templates/user_list.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/user_data.css' %}" >
 </head>
 <body>
+<td><a class="btn btn-primary btn_edit" href="{% url 'add_employee' %}">Add Employee</a>
+
 <table class="table table-bordered" align="center">
     <h3 class="mb-4 pb-2 pb-md-0 mb-md-4 px-md-2 mt-3" align="center">Employee Data</h3>
     <thead>
@@ -20,6 +22,7 @@
           <th scope="col">Building No.</th>
           <th scope="col">Room</th>
           <th scope="col">Edit</th>
+          <th scope="col">Delete</th>
       </tr>
     </thead>
     <tbody>
@@ -34,6 +37,7 @@
             <td scope="row">{{user.room}}</td>
 
             <td><a class="btn btn-primary btn_edit" href="{% url 'edit_employee' user.id %}">Edit</a>
+            <td><a class="btn btn-primary btn_edit" href="{% url 'delete_employee' user.id %}">Delete</a>
         </tr>
         {% endfor %}
     </tbody>
