--- a/XML_management/app_xml/templates/user_list.html
+++ b/XML_management/app_xml/templates/user_list.html
@@ -7,17 +7,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'css/user_data.css' %}" >
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script>
 
-        var employeeRedirectURL = "{% url 'show_xml' %}"
 
-    </script>
-    <script src="{% static 'js/user_list.js' %}"></script>
 </head>
 <body>
 
 <table class="table table-bordered" align="center">
-<a type="button" class="btn btn-primary btn_edit" id="employeeadd" href="{% url 'add_employee' %}">Add Employee</a>
+<button type="button" class="btn btn-primary btn_edit" id="employeeadd" >Add Employee</button>
 
     <h3 class="mb-4 pb-2 pb-md-0 mb-md-4 px-md-2 mt-3" align="center">Employee Data</h3>
     <thead>
@@ -54,56 +50,64 @@
 
 
 <!--This is click on add employee that time open modal-->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-<div class="modal-dialog">
+<!--<div class="modal fade bd-example-modal-lg" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">-->
+<div class="modal fade" tabindex="-1" id="staticBackdrop" role="dialog"  aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<div class="modal-dialog modal-lg">
   <div class="modal-content">
     <div class="modal-header">
-    <h5 class="modal-title" id="staticBackdropLabel" align="center">Songs add to playlist</h5>
+    <h5 class="modal-title" id="staticBackdropLabel" align="center">Employee Add Form</h5>
     </div>
-         <form id="addEmployeeForm" method="POST">
+         <form id="addEmployeeForm"  class="px-md-2" method="POST">
                     {% csrf_token %}
-                    <div class="my-2">
-                        <label for="id"> Id: </label>
+                    <div class="form-outline mb-4">
+                        <label for="id" class=form-label"> Id: </label>
                         <input type="text" class="form-control" id="id" placeholder="Enter First name" name="id"
                                required>
                         <div id="errorMessage" style="color: red;"></div>
                     </div>
-                    <div class="my-2">
+                    <div class="form-outline mb-4">
                         <label for="fname"> First Name: </label>
                         <input type="text" class="form-control" id="fname" placeholder="Enter First name"
                                name="firstname" required>
                     </div>
-                    <div class="my-2">
+                    <div class="form-outline mb-4">
                         <label for="lname"> Last Name: </label>
                         <input type="text" class="form-control" id="lname" placeholder="Enter Last name" name="lastname"
                                required>
                     </div>
-                    <div class="my-2">
+                    <div class="form-outline mb-4">
                         <label for="title">Title: </label>
                         <input type="text" class="form-control" id="title" placeholder="Title"
                                value="{{select_employee_data.title}}" name="title">
                     </div>
-                    <div class="my-2">
+                    <div class="form-outline mb-4">
                         <label for="division">Division: </label>
                         <input type="text" class="form-control" id="division" placeholder="Enter Your Division"
                                name="division" required>
                     </div>
-                    <div class="my-2">
+                    <div class="form-outline mb-4">
                         <label for="building">Building: </label>
                         <input type="number" class="form-control" id="building" placeholder="Enter Building "
                                name="building" required>
                     </div>
-                    <div class="my-2">
+                    <div class="form-outline mb-4">
                         <label for="room">Room: </label>
                         <input type="number" class="form-control" id="room" placeholder="Enter Room number" name="room"
                                required>
                     </div>
-                    <button type="submit" class="btn btn-danger"> Submit</button>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary close_btn" data-coreui-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary" href="{% url 'add_employee' %}">Submit</button>
+                    </div>
                 </form>
         </div>
       </div>
 </div>
-
+<script>
+        var employeeRedirectURL =  "{% url 'show_xml' %}"
+        var employeeAddURL = "{% url 'add_employee' %}"
+</script>
+<script src="{% static 'js/user_list.js' %}"></script>
 
 </body>
 </html>
