--- a/XML_management/app_xml/templates/employee_update.html
+++ b/XML_management/app_xml/templates/employee_update.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale = 1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
+
+
+
 <div class="container mt-3">
     <h1 align="center"> Employee Edit Form </h1>
     <form method="POST">
@@ -44,5 +41,6 @@
         <button type="submit" class="btn btn-danger"> Submit</button>
     </form>
 </div>
-</body>
-</html>
+
+
+{% endblock %}
