--- a/XML_management/app_xml/templates/user_list.html
+++ b/XML_management/app_xml/templates/user_list.html
@@ -1,16 +1,12 @@
+{% extends 'base.html' %}
 {% load static %}
-<html>
-<head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/user_data.css' %}" >
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+{% block content %}
 
 
-</head>
-<body>
+<link rel="stylesheet" type="text/css" href="{% static 'css/user_data.css' %}" >
+
+<p class="output"></p>
+
 
 <table class="table table-bordered" align="center">
 <button type="button" class="btn btn-primary btn_edit" id="employeeadd" >Add Employee</button>
@@ -50,7 +46,6 @@
 
 
 <!--This is click on add employee that time open modal-->
-<!--<div class="modal fade bd-example-modal-lg" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">-->
 <div class="modal fade" tabindex="-1" id="staticBackdrop" role="dialog"  aria-labelledby="staticBackdropLabel" aria-hidden="true">
 <div class="modal-dialog modal-lg">
   <div class="modal-content">
@@ -109,5 +104,5 @@
 </script>
 <script src="{% static 'js/user_list.js' %}"></script>
 
-</body>
-</html>
+
+{% endblock %}
