--- a/XML_management/app_xml/templates/xml_file_list.html
+++ b/XML_management/app_xml/templates/xml_file_list.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <link rel="stylesheet" type="text/css" href="{% static 'css/xml_file_list.css' %}">
-<button type="button" class="btn btn-primary btn_edit" id="btn_compare" >compare</button>
+<a type="button" class="btn btn-primary btn_edit" id="btn_compare" >compare</a>
 
 <table class="table table-bordered" align="center">
       <h3 class="mb-4 pb-2 pb-md-0 mb-md-4 px-md-2 mt-3" align="center">Employee Data</h3>
@@ -19,7 +19,7 @@
      {% with actual_number=page_obj.start_index|add:forloop.counter0 %}
         <tr>
              <td scope="row">{{ actual_number }}</td>
-             <td scope="row" ><input type="checkbox" id="coding" class="check_select" name="interest"/></td>
+             <td scope="row" ><input type="checkbox" fileName="{{ obj }}" id="coding" class="check_select" name="xmlFile"/></td>
              <td scope="row">{{ obj }}</td>
         </tr>
      {% endwith %}
@@ -28,10 +28,9 @@
 </table>
 
 
+
 <div class="pagination-container">
-<!--    <div class="">-->
-<!--      Showing page {{page_obj.number}} of {{ page_obj.paginator.num_pages }}-->
-<!--    </div>-->
+
     <ul class="pagination justify-content-center">
       {% if page_obj.has_previous %}
       <li {% if page_obj.number == 1 %} class="page-item active" {% endif %}><a class="page-link" href="?page=1">« 1</a></li>
@@ -44,6 +43,43 @@
   {% endif %}
   </ul>
   </div>
+
+
+<!-- Click on compare button and show this modal -->
+  <div class="modal fade" tabindex="-1" id="comparexml" role="dialog"  aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel" align="center">hello</h5>
+        </div>
+        <h1>XML File List</h1>
+
+        <h2>XML File 1:</h2>
+        <ul>
+            {% for element in tree1 %}
+              <li class="{% if element in new_elements %}new-element{% endif %}">
+                {{ element }}
+              </li>
+            {% endfor %}
+        </ul>
+        <h2>XML File 2:</h2>
+        <ul>
+            {% for element in tree2 %}
+              <li class="{% if element in new_elements %}new-element{% endif %}">
+                {{ element }}
+              </li>
+            {% endfor %}
+        </ul>
+    
+      </div>
+    </div>
+  </div>
+
+
+
+<script>
+  var csrf_token = "{{csrf_token}}"
+</script>
 
 <script src="{% static 'js/xml_file_list.js' %}"></script>
 
