done show xml form in html

--- a/XML_management/app_xml/templates/xml_file_list.html
+++ b/XML_management/app_xml/templates/xml_file_list.html
@@ -58,9 +58,18 @@
         <div class="modal-header">
           <h5 class="modal-title" id="staticBackdropLabel" align="center">hello</h5>
         </div>
-        <div id="employeesContainer"></div>
-        
-    
+         <h1>File Comparison</h1>
+
+                <div style="display: flex;">
+                    <div style="flex: 1;">
+                        <h2>File 1</h2>
+                        <div id="file1_data">{{file1_content}}</div>
+                    </div>
+                    <div style="flex: 1;">
+                        <h2>File 2</h2>
+                        <div id="file2_data"></div>
+                    </div>
+                </div>
       </div>
     </div>
   </div>
