--- a/XML_management/app_xml/templates/compare_xml.html
+++ b/XML_management/app_xml/templates/compare_xml.html
@@ -1,20 +1,33 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block content %}
+<!--{% extends 'base.html' %}-->
+<!--{% load static %}-->
+<!--{% block content %}-->
 
-<h1>File Comparison</h1>
+<!--<table class="table table-bordered" align="center">-->
+<!--                <h3 class="mb-4 pb-2 pb-md-0 mb-md-4 px-md-2 mt-3" >file 1</h3>-->
+<!--                <thead>-->
+<!--                  <tr class="table-dark">-->
+<!--                    <th scope="col">Id</th>-->
+<!--                    <th scope="col">First name</th>-->
+<!--                      <th scope="col">Last name</th>-->
+<!--                      <th scope="col">Title</th>-->
+<!--                      <th scope="col">Division</th>-->
+<!--                      <th scope="col">Building No.</th>-->
+<!--                      <th scope="col">Room</th>-->
+<!--                  </tr>-->
+<!--                </thead>-->
+<!--                <tbody>-->
+<!--                {{file1_data}}-->
+<!--                    <tr class="file1_table">-->
+<!--                        <td scope="row"></td>-->
+<!--                        <td scope="row"></td>-->
+<!--                        <td scope="row"></td>-->
+<!--                        <td scope="row"></td>-->
+<!--                        <td scope="row"></td>-->
+<!--                        <td scope="row"></td>-->
+<!--                        <td scope="row"></td>-->
+<!--                </tbody>-->
+<!--            </table>-->
 
-    <div style="display: flex;">
-        <div style="flex: 1;">
-            <h2>File 1</h2>
-            <pre id="file1_data">{{ file1_content }}</pre>
-        </div>
-        <div style="flex: 1;">
-            <h2>File 2</h2>
-            <pre id="file2_data">{{ file2_content }}</pre>
-        </div>
-    </div>
 
 
-
-{% endblock %}
+<!--{% endblock %}-->
