compare two xml file data done

--- a/XML_management/app_xml/templates/xml_file_list.html
+++ b/XML_management/app_xml/templates/xml_file_list.html
@@ -4,7 +4,7 @@
 
 
 <link rel="stylesheet" type="text/css" href="{% static 'css/xml_file_list.css' %}">
-<a type="button" class="btn btn-primary btn_edit" id="btn_compare"  >compare</a>
+<a type="button" class="btn btn-primary " id="btn_compare"  >compare</a>
 
 <table class="table table-bordered" align="center">
       <h3 class="mb-4 pb-2 pb-md-0 mb-md-4 px-md-2 mt-3" align="center">Xml File List</h3>
